# mini-arena-social-simulation

./: .gitignore  README.md  pyproject.toml
configs/: baseline_10turn.yaml  benchmark_10turn_llama31_70b.yaml  benchmark_10turn_llama31_latest.yaml  benchmark_10turn_qwen35_9b.yaml  personas.yaml  rules.yaml  run_100turn_llama31_latest.yaml  run_100turn_mistral_nemo_12b.yaml  run_25turn_mistral_nemo_12b.yaml  run_25turn_mixed_host70b_guestslatest_neutralprompts.yaml  run_25turn_phi4_14b.yaml  run_50turn_llama31_70b.yaml  run_50turn_llama31_latest_small.yaml  run_50turn_qwen35_9b_reasonable.yaml  scenes.yaml
docs/: getting-closer-to-v1-review.md  mistral-iteration-results.md  seed1337-model-analysis.md
mini-arena/configs/: baseline_50turn_raw.yaml  run_25turn_mixed_host70b_guestslatest.yaml
mini-arena/scripts/: __init__.py  inspect_run.py  replay_run.py  run_baseline.py
mini-arena/sim/: checkpoint.py  env.py  inference.py  orchestrator.py  prompts.py  replay.py  schemas.py  world_state.py
mini-arena/tests/: test_inference.py  test_metrics.py  test_replay.py  test_schemas.py
scripts/: analyze_run.py  benchmark_models.py  monitor_run.py  prompt_ab_test.py  run_variant.py
sim/: __init__.py  checkpoint.py  env.py  inference.py  logging_utils.py  memory.py  metrics.py  orchestrator.py  prompts.py  replay.py  safety.py  schemas.py  world_state.py
src/mini_arena_social_sim/: __init__.py  analysis.py  arena_engine.py  cli.py  defaults.py  event_resolver.py  (+11 more)
tests/: test_env.py  test_inference.py  test_orchestrator.py  test_safety.py  test_schemas.py  test_smoke.py
(+21 files in other folders)
