[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-arena-social-simulation"
version = "0.1.0"
description = "A local-first multi-agent social simulation for studying coercion, trust, and adaptation in a bounded arena."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10",
]

[project.scripts]
mini-arena = "mini_arena_social_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mini_arena_social_sim = ["prompts/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
